--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/casserole.html">Casserole</a>
+    <ul>
+        <li><a href="recipes/casserole.html">Casserole</a></li>
+        <li><a href="recipes/oatmeal.html">Healthy Oatmeal with Fruit and Nuts</a></li>
+    </ul>
 </body>
+
 </html>
