--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="recipes/casserole.html">Casserole</a></li>
         <li><a href="recipes/oatmeal.html">Healthy Oatmeal with Fruit and Nuts</a></li>
+        <li><a href="recipes/pasta.html">Creamy Chicken Pasta</a></li>
     </ul>
 </body>
 
